fix: left align placeholder and text input

--- a/style/style.css
+++ b/style/style.css
@@ -347,7 +347,7 @@ body.dark {
 
 .local {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   margin-top: 10px;
   align-items: center;
 }
@@ -358,20 +358,11 @@ body.dark {
   font-family: sans-serif;
   border: none;
   background-color: #d9d9d9;
-  text-align: center;
   font-size: 35px;
 }
 
 ::placeholder {
   color: #575a89;
-}
-
-::-webkit-input-placeholder {
-  text-align: center;
-}
-
-:-moz-placeholder {
-  text-align: center;
 }
 
 .local img {
@@ -383,7 +374,6 @@ body.dark {
 /* product container */
 
 .product-container {
- 
   background-color: #d9d9d9;
   display: flex;
   justify-content: center;
@@ -481,8 +471,8 @@ body.dark {
   padding: 1.5rem;
 }
 
-.play-button:hover{
-	cursor: pointer;
+.play-button:hover {
+  cursor: pointer;
 }
 
 .google-button {
@@ -960,14 +950,13 @@ footer {
   transform: scale(1.1);
 }
 
-.social a{
+.social a {
   margin-bottom: 10px;
   text-align: center;
   display: flex;
   gap: 10px;
   align-items: center;
   color: white;
-
 }
 
 /* ====================== SCROLL BAR ===================== */
